# hdtSMP-force-fields-NG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/ports/clib-util/: vcpkg.json
hdtSMP-force-fields/: Clock.h  Concepts.h  Cylinder.h  Explosion_traits.h  Force.h  ForceFieldManager.cpp  ForceFieldManager.h  Geometry.h  IForceField.h  ObjRef_traits.cpp  ObjRef_traits.h  Plane.h  PluginHelper.h  Settings.cpp  Settings.h  Sphere.h  TForceField.h  Timer.h  Vortex.h  get_member.h  hooks.cpp  hooks.h  main.cpp  memory.cpp  memory.h  objects.h  utils.cpp  utils.h
hdtSMP-force-fields/concepts/: Transformable.h
hdtSMP-force-fields/factories/: Bomb.cpp  Bomb.h  Cylinder.cpp  Sphere.cpp  Vortex.cpp
hdtSMP-force-fields/objects/: Effect_traits.cpp  Effect_traits.h  Hazard_traits.h  Projectile_traits.h  obj_traits.h
include/: PCH.h
include/hdtSMP64/: IEventListener.h  PluginAPI.h
